<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maminicalculatrice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="idtitre">Super Calculator</string>
    <string name="hint1">nombre 1 ?</string>
    <string name="hint2">"nombre 2 ?"</string>
    <string name="idadd">+</string>
    <string name="idsou">-</string>
    <string name="idmul">*</string>
    <string name="iddiv">/</string>
    <string name="idce">CE</string>
    <string name="idres">Resultat :</string>
    <string name="idpoint">.......</string>

</resources>